--- a/css/main.css
+++ b/css/main.css
@@ -134,16 +134,22 @@ button.mc {
   border-width: 0px;
   padding: 0px;
   margin: 0px;
+    display: inline-block;
+        border-spacing: 0;
+    border-collapse: collapse;
+   
 }
 
 table{
     table-layout:fixed;
 }
 
-td {
+tr td {
+    height:64px;
     padding: 0px;
-    margin: 0px;
+    margin: -1px;
     border-width: 0px;
     display: inline-block;
-    
+    border-spacing: 0;
+    border-collapse: collapse;
 }
