--- a/css/main.css
+++ b/css/main.css
@@ -153,3 +153,12 @@ tr td {
     border-spacing: 0;
     border-collapse: collapse;
 }
+
+* {
+	outline: none;
+}
+
+a:active,
+a:focus { 
+    -moz-outline-style: none; 
+}
